[package]
name = "cidre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "net", "process", "io-util"] }
parking_lot = "0.12.0"

#[lib]
#crate-type = ["staticlib", "rlib"]

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"


