[package]
name = "cargo-box"
version = "0.1.0"
edition = "2024"

rust-version = "1.85"

description = "iOS/macOS runner"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_toml = "0.22"
dotenv = "0.15"

cidre = { path = "../cidre", default-features = false, features = ["ns", "cg", "cf", "sec"] }
