[package]
name = "cidre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["full"]

full = [
  "private",

  "blocks",
  "async",

  "app",
  "am",
  "at",
  "ca",
  "ci",
  "cl",
  "cm",
  "cmio",
  "ct",
  "av",
  "cf",
  "cg",
  "iio",
  "ns",
  "nl",
  "vt",
  "sc",
  "mc",
  "mtl",
  "mlc",
  "cv",
  "objc",
  "mps",
  "mpsg",
  "dispatch",
  "da",
  "simd",
  "cat",
  "vn",
  "sn",
  "ui",
  "ut",
  "un",
  "io",
  "nw",
  "core_motion",
  "core_audio",
  "wc",
  "wk",
  "gc",
  "xpc",
  "vdsp",
]

# Turn on private API
private = []
async = ["blocks", "dep:parking_lot"]

blocks = []
cf = []
cat = []
simd = []
app = ["ns"]
am = ["private", "cf", "dep:tokio"]
at = ["cf", "cat"]
av = ["ns", "ut"]
ca = ["ns"]
sc = ["ns"]
cl = ["ns"]
cm = ["cf"] # optional cv, cat
cmio = ["cm"]
cv = ["cf", "cg"]
ci = ["cf", "ns"]
cg = ["cf"] # optional io, dispatch, blocks
iio = ["cg"]
objc = ["dep:cidre-macros"]
ns = ["objc"]
nl = ["ns"]
vt = ["cf", "cv", "cg", "cm"]
io = ["cf"]
sn = ["ns"]
vn = ["ns"]
vdsp = []
nw = ["ns", "dispatch"]
ui = ["ns"]
ut = ["ns"]
un = ["ns"]
ct = ["cf", "cg"]
mc = ["ns"]
mtl = ["ns"]
mlc = ["mtl"]
mps = ["mtl"]
mpsg = ["mps"]
dispatch = ["cf", "ns"]
da = ["cf"]
core_motion = ["ns"]
core_audio = []
wc = ["ns"]
wk = ["ns"]
gc = ["ns"]
xpc = ["ns", "blocks"]
custom-allocator = []
classic-objc-retain-release = []

[dependencies]

tokio = { version = "1", optional = true, default-features = false, features = ["macros", "rt", "rt-multi-thread", "time", "net", "process", "io-util"] }
parking_lot = { version = "0.12", optional = true }
cidre-macros = { optional = true, path = "../cidre-macros"}

[dev-dependencies]
criterion = "0.5"
# rt = { path = "../../rt"}
# ndarray = "0.15"
# linfa = "0.6.1"
# linfa-clustering = "0.6.1"
# linfa-reduction = "0.6.1"
clap = { version = "4.3", features = ["default", "derive"] }
tokio = { version = "1", features = ["signal"] }
mimalloc = { version = "0.1" }
uuid = { version = "1.7", features = ["v4", "v7", "fast-rng", "serde"] }


[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "blocks"
harness = false

[[bench]]
name = "cf_string"
harness = false

[[bench]]
name = "ns_array_from"
harness = false

[[bench]]
name = "cf_date_formatter"
harness = false

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "interleave"
harness = false

[[example]]
name = "am-device-list"
required-features = ["am"]

[[example]]
name = "am-device-mount-dev-image"
required-features = ["am"]

[[example]]
name = "sc-record"
required-features = ["custom-allocator"]

[lib]
#proc-macro = true
#crate-type = ["staticlib", "rlib"]


[package.metadata.playground]
features = ["full"]
