[package]
name = "cidre"
version = "0.4.0"
edition = "2021"

rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["full"]

full = [
  "private",

  "blocks",
  "async",

  "app",
  "am",
  "at",
  "ca",
  "ci",
  "cl",
  "cm",
  "cmio",
  "ct",
  "av",
  "av_kit",
  "cf",
  "cg",
  "iio",
  "ns",
  "nl",
  "vt",
  "sc",
  "mc",
  "mtl",
  "mtk",
  "mlc",
  "cv",
  "objc",
  "mps",
  "mpsg",
  "dispatch",
  "da",
  "simd",
  "cat",
  "vn",
  "sn",
  "ui",
  "ut",
  "un",
  "io",
  "nw",
  "core_motion",
  "core_audio",
  "wc",
  "wk",
  "gc",
  "xpc",
  "vdsp",

  "macos_15_0",
  "ios_18_0",
  "tvos_18_0",
  "maccatalyst_18_0",
  "watchos_11_0",
  "visionos_2_0",
]

# Turn on private API
private = []
async = ["blocks", "dep:parking_lot"]

### blocks runtime
blocks = []

### Core Foundation framework
cf = []
cat = []
simd = []
app = ["ns"]
am = ["private", "cf", "dep:tokio"]
at = ["cf", "cat"]
av = ["ns", "ut", "cv", "ca", "at"]
av_kit = ["av"]
ca = ["ns"]
sc = ["ns", "cm"]
cl = ["ns"]
cm = ["cf"] # optional cv, cat
cmio = ["cm"]
cv = ["cf", "cg"]
ci = ["cf", "ns"]
cg = ["cf"] # optional io, dispatch, blocks
iio = ["cg", "blocks"]
objc = ["dep:cidre-macros"]
ns = ["objc"]
nl = ["ns"]
vt = ["cf", "cv", "cg", "cm"]
io = ["cf"]
sn = ["ns"]
vn = ["ns"]
vdsp = []
nw = ["ns", "dispatch"]
ui = ["ns"]
ut = ["ns"]
un = ["ns"]
ct = ["cf", "cg"]
mc = ["ns"]
mtl = ["ns", "blocks"]
mtk = ["mtl"]
mlc = ["mtl"]
mps = ["mtl"]
mpsg = ["mps"]
dispatch = ["cf", "ns"]
da = ["cf"]
core_motion = ["ns"]
core_audio = []
wc = ["ns"]
wk = ["ns"]
gc = ["ns"]
xpc = ["ns", "blocks"]
custom-allocator = []
classic-objc-retain-release = []

# deployment targets

macos_10_0 = []
macos_10_4 = ["macos_10_0"]
macos_10_5 = ["macos_10_4"]
macos_10_6 = ["macos_10_5"]
macos_10_7 = ["macos_10_6"]
macos_10_8 = ["macos_10_7"]
macos_10_9 = ["macos_10_8"]
macos_10_10 = ["macos_10_9"]
macos_10_11 = ["macos_10_10"]
macos_10_12 = ["macos_10_11"]
macos_10_13 = ["macos_10_12"]
macos_10_14 = ["macos_10_13"]
macos_10_15 = ["macos_10_14"]
macos_11_0 = ["macos_10_15"]
macos_12_0 = ["macos_11_0"]
macos_12_3 = ["macos_12_0"]
macos_13_0 = ["macos_12_3"]
macos_13_1 = ["macos_13_0"]
macos_14_0 = ["macos_13_1"]
macos_14_2 = ["macos_14_0"]
macos_15_0 = ["macos_14_2"]

maccatalyst_13_0 = []
maccatalyst_14_0 = ["maccatalyst_13_0"]
maccatalyst_16_0 = ["maccatalyst_14_0"]
maccatalyst_16_1 = ["maccatalyst_16_0"]
maccatalyst_17_0 = ["maccatalyst_16_1"]
maccatalyst_18_0 = ["maccatalyst_17_0"]

ios_2_0 = []
ios_3_0 = ["ios_2_0"]
ios_4_0 = ["ios_3_0"]
ios_5_0 = ["ios_4_0"]
ios_6_0 = ["ios_5_0"]
ios_7_0 = ["ios_6_0"]
ios_8_0 = ["ios_7_0"]
ios_8_3 = ["ios_8_0"]
ios_9_0 = ["ios_8_3"]
ios_9_3 = ["ios_9_0"]
ios_10_0 = ["ios_9_3"]
ios_10_2 = ["ios_10_0"]
ios_11_0 = ["ios_10_2"]
ios_12_0 = ["ios_11_0"]
ios_13_0 = ["ios_12_0"]
ios_14_0 = ["ios_13_0"]
ios_14_1 = ["ios_14_0"]
ios_14_2 = ["ios_14_1"]
ios_15_0 = ["ios_14_2"]
ios_16_0 = ["ios_15_0"]
ios_16_4 = ["ios_16_0"]
ios_17_0 = ["ios_16_4"]
ios_18_0 = ["ios_17_0"]
ios_18_2 = ["ios_18_0"]

tvos_7_0 = []
tvos_8_0 = ["tvos_7_0"]
tvos_9_0 = ["tvos_8_0"]
tvos_10_0 = ["tvos_9_0"]
tvos_11_0 = ["tvos_10_0"]
tvos_11_2 = ["tvos_11_0"]
tvos_12_0 = ["tvos_11_2"]
tvos_13_0 = ["tvos_12_0"]
tvos_14_0 = ["tvos_13_0"]
tvos_15_0 = ["tvos_14_0"]
tvos_16_0 = ["tvos_15_0"]
tvos_17_0 = ["tvos_16_0"]
tvos_18_0 = ["tvos_17_0"]

watchos_2_0 = []
watchos_3_0 = ["watchos_2_0"]
watchos_5_0 = ["watchos_3_0"]
watchos_6_0 = ["watchos_5_0"]
watchos_7_0 = ["watchos_6_0"]
watchos_8_0 = ["watchos_7_0"]
watchos_10_0 = ["watchos_8_0"]
watchos_10_5 = ["watchos_10_0"]
watchos_11_0 = ["watchos_10_5"]

visionos_1_0 = []
visionos_1_1 = ["visionos_1_0"]
visionos_1_2 = ["visionos_1_1"]
visionos_2_0 = ["visionos_1_2"]
visionos_2_2 = ["visionos_2_0"]

# end of deployment targets

[dependencies]

tokio = { version = "1", optional = true, default-features = false, features = ["macros", "rt", "rt-multi-thread", "time", "net", "process", "io-util"] }
parking_lot = { version = "0.12", optional = true }
cidre-macros = { optional = true, path = "../cidre-macros"}

[dev-dependencies]
criterion = "0.5"
# rt = { path = "../../rt"}
# ndarray = "0.15"
# linfa = "0.6.1"
# linfa-clustering = "0.6.1"
# linfa-reduction = "0.6.1"
clap = { version = "4.3", features = ["default", "derive"] }
tokio = { version = "1", features = ["signal", "sync"] }
mimalloc = { version = "0.1" }
uuid = { version = "1.9", features = ["v4", "v7", "fast-rng", "serde"] }


[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "blocks"
harness = false

[[bench]]
name = "cf_string"
harness = false

[[bench]]
name = "ns_array_from"
harness = false

[[bench]]
name = "cf_date_formatter"
harness = false

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "interleave"
harness = false

[[bench]]
name = "dispatch_sync"
harness = false

[[example]]
name = "am-device-list"
required-features = ["am"]

[[example]]
name = "am-device-mount-dev-image"
required-features = ["am"]

[[example]]
name = "sc-record"
required-features = ["custom-allocator"]

[lib]
#proc-macro = true
#crate-type = ["staticlib", "rlib"]


[package.metadata.playground]
features = ["full"]
